segundo commit mod.hasta opiniones

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<!-- SECCION OPINIONES-->
 		<div class="container">
 			<section id="opiniones">
-				<h2 class="display-4 text-center text-primary">Opiniones</h2>
+				<h2 class="display-4 text-center text-primary mb-4">Opiniones</h2>
 				<div class="row">
 					<div class="col-12 col-md-6 col-xl-3">
 						<blockquote class="blockquote p-3">
@@ -434,8 +434,8 @@
 	</footer>
 
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<!-- JavaScript -->
+	<!-- jQuery, Popper.js,Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
