--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 	<section class="container" id="servicios">
 		<h2 class="display-4 text-center mb-5 display-4 text-primary">Servicios</h2>
 		<div class="row">
-			<div class="col-12 col-sm-6 col-lg-3 d-flex flex-column align-items-center mb-5">
-				<div class="mb-4"><img src="img/brush.svg"></div>
+			<div class="col-12 col-sm-6 col-lg-3 d-flex flex-column align-items-center mb-5 mt-3">
+				<div class="mb-4"><img class="border border-white" src="img/brush.svg"></div>
 				<h3 class="h4 mb-4 text-center">Diseño Personalizado</h3>
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor.</p>
