--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
 			<div class=" container">
 				<div class="row">
 					<div class="col-12 col-md-6 d-flex flex-column">
-						<img class=" rounded-circle team mb-3 mx-auto" src="img/avatarMaty.png">
-						<h5 class=" text-center font-weight-bold">Matias Carpintini</h5>
+						<img class=" rounded-circle team mb-3 mx-auto" src="img/menBoard.jpg">
+						<h5 class=" text-center font-weight-bold">Ben Palmer</h5>
 						<h5 class=" text-center font-weight-bold">Founder</h5>
 						<p class=" mb-4 text-left px-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -254,8 +254,8 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 d-flex flex-column mt-3 mt-md-0">
-						<img class="rounded-circle team mb-3 mx-auto" src="img/RoYyo.jfif">
-						<h5 class="text-center font-weight-bold">Lucas Moreno</h5>
+						<img class="rounded-circle team mb-3 mx-auto" src="img/girlBook.jpg">
+						<h5 class="text-center font-weight-bold">Lisa Thompson</h5>
 						<h5 class="text-center font-weight-bold">Co-Founder</h5>
 						<p class=" mb-4 text-left px-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
