fin sec.Contacto

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				adipisicing elit. Maxime, facilis obcaecati.</p>
 			<p class="lead mb-4 text-uppercase mb-md-4">Lorem ipsum dolor sit amet consectetur
 				adipisicing elit.</p>
-				
+
 			<div class="row d-flex justify-content-center">
 				<div class=" text-center boton" id="btnConocenos"><a href="#video" class=" text-white">Conocenos</a>
 				</div>
@@ -280,8 +280,8 @@
 	<section id="contacto" class="bg-secondary">
 		<div class="container">
 			<form class="py-5 text-white">
-				<h2 class="text-center">Suscríbete a nuestro newsletter</h2>
-				<p>Recibi las ultimas noticias sobre marketing y ventas.</p>
+				<h2 class="text-center mb-4">Contactanos!!</h2>
+				<p>Suscríbete a nuestro newsletter y recibi las ultimas noticias sobre marketing y ventas.</p>
 				<div class="row">
 					<div class="col-12 col-sm-6">
 						<div class="form-group">
@@ -293,6 +293,13 @@
 						<div class="form-group">
 							<label for="input-email" class="sr-only">Tu E-mail:</label>
 							<input type="emal" class="form-control" placeholder="mail@example.com" id="input-email">
+						</div>
+					</div>
+					<div class="col-12">
+						<div class="form-group">
+							<label for="exampleFormControlTextarea1" class="sr-only" >Example textarea</label>
+							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Dejanos tu consulta"></textarea>
+
 						</div>
 					</div>
 				</div>
