se agrego boton solo enviar

--- a/index.html
+++ b/index.html
@@ -311,7 +311,10 @@
 				</div>
 				<div class="d-flex justify-content-between">
 					<small class="form-text">Puedes cancelar la suscripción en cualquier momento</small>
-					<button type="submit" class="btn btn-primary">Suscibirse!</button>
+				</div>
+				<div class="d-flex justify-content-end">
+					<button type="submit" class="btn btn-primary mr-4">Enviar & Suscibirse!</button>
+					<button type="submit" class="btn btn-primary">Enviar!</button>
 				</div>
 			</form>
 			<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
@@ -382,7 +385,7 @@
 					</ul>
 				</div>
 				<div class="col-6 col-sm-6 col-lg-3">
-					<h6>Informatioin</h6>
+					<h6>Información</h6>
 					<ul class="list-unstyled">
 						<li><a href="#">About us</a></li>
 						<li><a href="#">Trabaja con nosotros</a></li>
@@ -419,7 +422,7 @@
 					<ul class="list-inline">
 						<li class="list-inline-item">&copy; 2019 Lemon Dev's.</li>
 						<li class="list-inline-item">Todos los derechos reservados.</li>
-						<li><a href="#">Cancelar suscipción</a></li>
+						<li><a href="#">Cancelar suscipción.</a></li>
 						<!-- <li class="list-inline-item"><a href="#" data-toggle="modal" data-target="#modal">Terminos y condiciones</a></li> -->
 					</ul>
 				</div>
