se reparo input mail

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 					<div class="col-12 col-sm-6">
 						<div class="form-group">
 							<label for="input-email" class="sr-only">Tu E-mail:</label>
-							<input type="emal" class="form-control" placeholder="mail@example.com" id="input-email">
+							<input type="email" class="form-control" placeholder="mail@example.com" id="input-email">
 						</div>
 					</div>
 					<div class="col-12">
