--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<h2 class="display-4 text-center text-primary mb-4">Opiniones</h2>
 				<div class="row">
 					<div class="col-12 col-md-6 col-xl-3">
-						<blockquote class="blockquote p-3" data-aos="slide-right" data-aos-easing="ease-in-out" data-aos-duration="900">
+						<blockquote class="blockquote p-3" data-aos="fade-right" data-aos-easing="ease-in-out" data-aos-duration="900" data-aos-once="true">
 							<p><i class="fas fa-fw fa-quote-left text-secondary"></i>Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i
 									class="fas fa-fw fa-quote-right text-secondary"></i></p>
@@ -117,7 +117,7 @@
 						</blockquote>
 					</div>
 					<div class="col-12 col-md-6 col-xl-3">
-						<blockquote class="blockquote p-3" data-aos="slide-right" data-aos-easing="ease-in-out" data-aos-duration="900">
+						<blockquote class="blockquote p-3" data-aos="fade-right" data-aos-easing="ease-in-out" data-aos-duration="900" data-aos-once="true">
 							<p><i class="fas fa-fw fa-quote-left text-secondary"></i>Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i
 									class="fas fa-fw fa-quote-right text-secondary"></i></p>
@@ -126,7 +126,7 @@
 						</blockquote>
 					</div>
 					<div class="col-12 col-md-6 col-xl-3">
-						<blockquote class="blockquote p-3" data-aos="slide-left" data-aos-easing="ease-in-out" data-aos-duration="900">
+						<blockquote class="blockquote p-3" data-aos="fade-left" data-aos-easing="ease-in-out" data-aos-duration="900" data-aos-once="true">
 							<p><i class="fas fa-fw fa-quote-left text-secondary"></i>Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i
 									class="fas fa-fw fa-quote-right text-secondary"></i></p>
@@ -135,7 +135,7 @@
 						</blockquote>
 					</div>
 					<div class="col-12 col-md-6 col-xl-3">
-						<blockquote class="blockquote p-3" data-aos="slide-left" data-aos-easing="ease-in-out" data-aos-duration="900">
+						<blockquote class="blockquote p-3" data-aos="fade-left" data-aos-easing="ease-in-out" data-aos-duration="900" data-aos-once="true">
 							<p><i class="fas fa-fw fa-quote-left  text-secondary"></i>Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i
 									class="fas fa-fw fa-quote-right  text-secondary"></i></p>
