anim.sec.AbouUs

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 			<h2 class="display-4 text-center mb-4 text-primary">About us</h2>
 			<div class=" container">
 				<div class="row">
-					<div class="col-12 col-md-6 d-flex flex-column">
+					<div class="col-12 col-md-6 d-flex flex-column" data-aos="flip-right" data-aos-easing="ease-in-out" data-aos-duration="900" data-aos-once="true">
 						<img class=" rounded-circle team mb-3 mx-auto" src="img/menBoard.jpg">
 						<h5 class=" text-center font-weight-bold">Ben Palmer</h5>
 						<h5 class=" text-center font-weight-bold">Founder</h5>
@@ -262,7 +262,8 @@
 									class="fab fa-linkedin"></i></a>
 						</div>
 					</div>
-					<div class="col-12 col-md-6 d-flex flex-column mt-3 mt-md-0">
+					<div class="col-12 col-md-6 d-flex flex-column mt-3 mt-md-0" data-aos="flip-right" data-aos-easing="ease-in-out"
+						data-aos-duration="900" data-aos-once="true">
 						<img class="rounded-circle team mb-3 mx-auto" src="img/girlBook.jpg">
 						<h5 class="text-center font-weight-bold">Lisa Thompson</h5>
 						<h5 class="text-center font-weight-bold">Co-Founder</h5>
