ajuste sec.Contac

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
 
 	<!-- SECCION Newsletter -->
-	<section id="contacto" class="bg-secondary">
+	<section id="contacto" class="bg-secondary mb-5">
 		<div class="container">
 			<form class="py-5 text-white">
 				<h2 class="text-center mb-4">Contactanos!!</h2>
