--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 	<section id="home"
 		class="jumbotron jumbotron-fluid text-white d-flex justify-content-center align-items-center img-fluid">
 		<div class="container text-center mt-5 mt-sm-3 mt-md-0">
-			<h1>Lorem Ipsum</h1>
+			<h1>Lorem</h1>
 			<h2 class="mb-4">Lorem Ipsum Dolor</h2>
 			<p class="lead mb-4 text-uppercase mb-md-4">Lorem ipsum dolor sit amet consectetur
 				adipisicing elit. Maxime, facilis obcaecati.</p>
-			<p class="lead mb-4 text-uppercase mb-md-4">Lorem ipsum dolor sit amet consectetur
+			<p class="lead mb-4 text-uppercase mb-md-4 d-none d-sm-block">Lorem ipsum dolor sit amet consectetur
 				adipisicing elit.</p>
 
 			<div class="row d-flex justify-content-center">
-				<div class=" text-center boton" id="btnConocenos" data-aos="fade-up" data-aos-easing="ease-in-out"
+				<div class=" text-center boton mb-3 mb-sm-0" id="btnConocenos" data-aos="fade-up" data-aos-easing="ease-in-out"
 					data-aos-duration="600"><a href="#video" class=" text-white">Conocenos</a>
 				</div>
 				<div class="text-center boton" id="btnContacto" data-aos="fade-up"  data-aos-easing="ease-in-out"
@@ -213,7 +213,7 @@
 				<a href="#" class="btn btn-sm btn-info mt-auto">Ver más</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3 d-flex flex-column align-items-center mb-5" data-aos="fade-right"
-				data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="500" data-aos-once="true">
+				data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="400" data-aos-once="true">
 				<div class="mb-4"><img src="img/NetworkSharingByN.svg"></div>
 				<h3 class="h4 mb-4 text-center">Marketing Digital</h3>
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -221,7 +221,7 @@
 				<a href="#" class="btn btn-sm btn-info mt-auto">Ver más</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3 d-flex flex-column align-items-center mb-5" data-aos="fade-right"
-				data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="900" data-aos-once="true">
+				data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="700" data-aos-once="true">
 				<div class="mb-4"><img src="img/seo.svg"></div>
 				<h3 class="h4 mb-4 text-center">SEO</h3>
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -229,7 +229,7 @@
 				<a href="#" class="btn btn-sm btn-info mt-auto">Ver más</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3 d-flex flex-column align-items-center mb-5" data-aos="fade-right"
-				data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="1300" data-aos-once="true">
+				data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="1100" data-aos-once="true">
 				<div class="mb-4"><img src="img/cart.svg"></div>
 				<h3 class="h4 mb-4 text-center">E-Comerce</h3>
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -249,16 +249,16 @@
 						<img class=" rounded-circle team mb-3 mx-auto" src="img/menBoard.jpg">
 						<h5 class=" text-center font-weight-bold">Ben Palmer</h5>
 						<h5 class=" text-center font-weight-bold">Founder</h5>
-						<p class=" mb-4 text-left px-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						<p class=" mb-4 text-center text-md-left px-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.</p>
 
-						<div class=" text-primary d-inline-flex justify-content-start redesTeam mb-5">
-							<a href="http://matiascarpintini.com" target="blank"><strong>Blog</strong></a>
-							<a href="https://www.instagram.com/matiascarpintini/" target="blank"><i class="fab fa-instagram"></i></a>
-							<a href="https://www.facebook.com/mcarpintini" target="blank"><i class="fab fa-facebook-square"></i></a>
-							<a href="https://www.linkedin.com/in/matias-carpintini-947503b5/" target="blank"><i
+						<div class=" text-primary d-inline-flex justify-content-center justify-content-md-start redesTeam mb-5">
+							<a href="" target="blank"><strong>Blog</strong></a>
+							<a href="https://www.instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
+							<a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a>
+							<a href="https://www.linkedin.com" target="blank"><i
 									class="fab fa-linkedin"></i></a>
 						</div>
 					</div>
@@ -267,15 +267,15 @@
 						<img class="rounded-circle team mb-3 mx-auto" src="img/girlBook.jpg">
 						<h5 class="text-center font-weight-bold">Lisa Thompson</h5>
 						<h5 class="text-center font-weight-bold">Co-Founder</h5>
-						<p class=" mb-4 text-left px-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						<p class=" mb-4 text-left px-2 text-center text-md-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.</p>
 
-						<div class=" text-primary d-inline-flex justify-content-start redesTeam">
-							<a href="http://lucasbone.com" target="blank"><strong>Blog</strong></a>
-							<a href="https://www.instagram.com/lucasboneld/" target="blank"><i class="fab fa-instagram"></i></a>
-							<a href="https://www.facebook.com/lucas.bone.370" target="blank"><i
+						<div class=" text-primary d-inline-flex justify-content-center justify-content-md-start redesTeam">
+							<a href="" target="blank"><strong>Blog</strong></a>
+							<a href="https://www.instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
+							<a href="https://www.facebook.com" target="blank"><i
 									class="fab fa-facebook-square"></i></a>
 							<a href="https://www.linkedin.com" target="blank"><i class="fab fa-linkedin"></i></a>
 						</div>
@@ -287,7 +287,7 @@
 
 
 	<!-- SECCION Newsletter -->
-	<section id="contacto" class="bg-secondary mb-5">
+	<section id="contacto" class="bg-secondary pb-5">
 		<div class="container">
 			<form class="py-5 text-white">
 				<h2 class="text-center mb-4">Contactanos!!</h2>
