final ajustes responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- SECCION NAVEGACION  -->
 	<nav class="navbar navbar-dark navbar-expand-md fixed-top">
 		<img id="logo" src="img/logo.png">
-		<a id="nombre" href="#" class="navbar-brand">Lemon Dev's</a>
+		<a id="nombre" href="#" class="navbar-brand">Lorem Dev's</a>
 		<button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<i id="hamburguesa" class="fas fa-bars"></i>
@@ -80,13 +80,13 @@
 			<p class="lead mb-4 text-uppercase mb-md-4 d-none d-sm-block">Lorem ipsum dolor sit amet consectetur
 				adipisicing elit.</p>
 
-			<div class="row d-flex justify-content-center">
+			<div class="row d-flex justify-content-center mt-4">
 				<div class=" text-center boton mb-3 mb-sm-0" id="btnConocenos" data-aos="fade-up" data-aos-easing="ease-in-out"
-					data-aos-duration="600"><a href="#video" class=" text-white">Conocenos</a>
+					data-aos-duration="600"><a href="#video">Conocenos</a>
 				</div>
-				<div class="text-center boton" id="btnContacto" data-aos="fade-up"  data-aos-easing="ease-in-out"
+				<!-- <div class="text-center boton" id="btnContacto" data-aos="fade-up"  data-aos-easing="ease-in-out"
 					data-aos-duration="600"><a href="#contacto" class=" text-white">Contactanos</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
@@ -322,7 +322,7 @@
 				<div class="d-flex justify-content-between">
 					<small class="form-text">Puedes cancelar la suscripción en cualquier momento</small>
 				</div>
-				<div class="d-flex justify-content-end">
+				<div class="d-flex justify-content-start justify-content-md-end mt-3 mt-md-0">
 					<button type="submit" class="btn btn-primary mr-4">Enviar & Suscibirse!</button>
 					<button type="submit" class="btn btn-primary">Enviar!</button>
 				</div>
@@ -417,20 +417,20 @@
 				<div class="col-6 col-sm-6 col-lg-3">
 					<h6>Donde Estamos</h6>
 					<address>
-						<strong>Lemon Dev's</strong><br>
+						<strong>Lorem Dev's</strong><br>
 						350 5th avenue<br>
 						New York, NY 10118<br>
 						<a href="tel:+12127363100"><i class="fas fa-fw fa-phone-square "></i><a href="tel:+12127363100">(011)
 								4444-4444</a><br>
 							<a href="mailto:info@cameo.com"><i class="fas fa-fw fa-envelope-square"></i><a
-									href="mailto:info@cameo.com">info@lemon.com</a>
+									href="mailto:info@cameo.com">info@lorem.com</a>
 					</address>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-6 col-sm-6 col-lg-9">
 					<ul class="list-inline">
-						<li class="list-inline-item">&copy; 2019 Lemon Dev's.</li>
+						<li class="list-inline-item">&copy; 2019 Lorem Dev's.</li>
 						<li class="list-inline-item">Todos los derechos reservados.</li>
 						<li><a href="#">Cancelar suscipción.</a></li>
 						<!-- <li class="list-inline-item"><a href="#" data-toggle="modal" data-target="#modal">Terminos y condiciones</a></li> -->
